@@ -1,5 +1,25 @@
 package com.kitchensink.service.impl;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.mongodb.core.MongoTemplate;
+import org.springframework.data.mongodb.core.query.Criteria;
+import org.springframework.data.mongodb.core.query.Query;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestTemplate;
+
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.kitchensink.dto.MemberDto;
@@ -8,27 +28,11 @@ import com.kitchensink.dto.UpdateMemberRequest;
 import com.kitchensink.entity.Member;
 import com.kitchensink.enums.ErrorType;
 import com.kitchensink.exception.AppAuthenticationException;
+import com.kitchensink.exception.BaseApplicationException;
 import com.kitchensink.repository.MemberRepository;
 import com.kitchensink.service.MemberService;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.mongodb.core.MongoTemplate;
-import org.springframework.data.mongodb.core.query.Criteria;
-import org.springframework.data.mongodb.core.query.Query;
-import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestTemplate;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-import java.util.regex.Pattern;
-import java.util.stream.Collectors;
+import lombok.extern.slf4j.Slf4j;
 
 /**
  * The Class MemberServiceImpl.
@@ -61,10 +65,9 @@ public class MemberServiceImpl implements MemberService {
      * @param memberRepository
      *            the member repository
      */
-    public MemberServiceImpl(MemberRepository memberRepository, RestTemplate restTemplate,
-                             MongoTemplate mongoTemplate,
-                             @Value("${phone.validation.enabled:true}") boolean phoneValidationEnabled,
-                             @Value("${phone.validation.apikey:123}") String phoneValidationKey) {
+    public MemberServiceImpl(MemberRepository memberRepository, RestTemplate restTemplate, MongoTemplate mongoTemplate,
+        @Value("${phone.validation.enabled:true}") boolean phoneValidationEnabled,
+        @Value("${phone.validation.apikey:123}") String phoneValidationKey) {
         this.memberRepository = memberRepository;
         this.restTemplate = restTemplate;
         this.mongoTemplate = mongoTemplate;
@@ -123,13 +126,14 @@ public class MemberServiceImpl implements MemberService {
      */
     private Page<MemberDto> transformMember(Page<Member> membersPage) {
 
-        List<MemberDto> memberDTOs = membersPage.getContent().stream().map(this::toMemberDto).collect(Collectors.toList());
+        List<MemberDto> memberDTOs = membersPage.getContent().stream().map(this::toMemberDto).collect(Collectors
+            .toList());
 
         // Create a new PageImpl with the converted content and original pagination info
         return new PageImpl<>(memberDTOs, membersPage.getPageable(), membersPage.getTotalElements());
     }
 
-    private MemberDto toMemberDto(Member member){
+    private MemberDto toMemberDto(Member member) {
         MemberDto memberDto = new MemberDto();
         memberDto.setId(member.getId());
         memberDto.setName(member.getName());
@@ -211,8 +215,8 @@ public class MemberServiceImpl implements MemberService {
     @Override
     public void validatePhoneNumber(String phoneNumber) {
         if (phoneValidationEnabled && !validatePhone(phoneNumber)) {
-            throw new AppAuthenticationException("Invalid phone number: " + phoneNumber,
-                ErrorType.PHONE_NUMBER_INVALID);
+            throw new BaseApplicationException("Invalid phone number: " + phoneNumber, ErrorType.PHONE_NUMBER_INVALID,
+                HttpStatus.BAD_REQUEST);
         }
     }
 
